# trio-jsonrpc

./: .bish-index  .bish.sqlite  .coveragerc  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/: .bish.sqlite
docs/: .bish.sqlite  changelog.rst  clients.rst  conf.py  dispatch.rst  errors.rst  examples.rst  index.rst  install.rst  requirements.txt  servers.rst  sphinx.rst
example/: .bish-index  .bish.sqlite  client.py  server.py  shared.py
tests/: .bish-index  .bish.sqlite  __init__.py  test_dispatch.py  test_main.py  test_memory.py  test_ws.py
trio_jsonrpc/: .bish-index  .bish.sqlite  __init__.py  dispatch.py  main.py  sphinx_ext.py
trio_jsonrpc/transport/: __init__.py  memory.py  ws.py
