[tool.poetry]
name = "trio-jsonrpc"
version = "0.4.0"
description = "JSON-RPC v2.0 for Trio"
authors = ["Mark E. Haase <mehaase@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hyperiongray/trio-jsonrpc"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet"
]

[tool.poetry.dependencies]
python = "^3.7"
sansio-jsonrpc = "^0.2.0"
trio-websocket = "^0.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-trio = "^0.5.2"
codecov = "^2.0.22"
sphinx = "^3.0.3"
sphinx-rtd-theme = "^0.4.3"
sphinxcontrib_trio = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
